<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_display_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/settings_content_padding_start"
    android:paddingTop="@dimen/commercial_content_padding_top"
    android:paddingEnd="@dimen/settings_content_padding_end"
    android:paddingBottom="@dimen/settings_content_padding_vertical">

    <TextView
        style="@style/SettingsText.Body1.Emphasis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_topbar_display" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_segment_height"
        android:layout_marginTop="@dimen/settings_control_spacing"
        android:background="@drawable/bg_settings_segment_track"
        android:orientation="horizontal"
        android:padding="@dimen/settings_segment_padding">

        <TextView
            android:id="@+id/topbar_lines_current"
            style="@style/SettingsText.Option"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/settings_topbar_one_line" />

        <TextView
            android:id="@+id/topbar_lines_current_next"
            style="@style/SettingsText.Option"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/settings_topbar_two_lines" />
    </LinearLayout>

    <TextView
        style="@style/SettingsText.Body1.Emphasis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_group_spacing"
        android:text="@string/settings_lyrics_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_segment_height"
        android:layout_marginTop="@dimen/settings_control_spacing"
        android:background="@drawable/bg_settings_segment_track"
        android:orientation="horizontal"
        android:padding="@dimen/settings_segment_padding">

        <TextView
            android:id="@+id/font_size_small"
            style="@style/SettingsText.Option"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/settings_size_small" />

        <TextView
            android:id="@+id/font_size_standard"
            style="@style/SettingsText.Option"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/settings_size_standard" />

        <TextView
            android:id="@+id/font_size_large"
            style="@style/SettingsText.Option"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/settings_size_large" />
    </LinearLayout>

    <TextView
        style="@style/SettingsText.Body1.Emphasis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_group_spacing"
        android:text="@string/settings_other" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_control_spacing"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/wallpaper_lyrics_setting"
            android:layout_width="@dimen/settings_switch_card_width"
            android:layout_height="@dimen/settings_switch_card_height"
            android:background="@drawable/bg_settings_card"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:importantForAccessibility="no"
            android:orientation="horizontal"
            android:paddingStart="@dimen/settings_switch_card_padding_start"
            android:paddingEnd="@dimen/settings_switch_card_padding_start">

            <com.tcrrry.desktoplyrics.IcarSwitch
                android:id="@+id/wallpaper_lyrics_switch"
                android:layout_width="@dimen/settings_switch_width"
                android:layout_height="@dimen/settings_switch_height"
                android:clickable="true"
                android:contentDescription="@string/settings_wallpaper_lyrics" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_switch_label_spacing"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingsText.Body2.Emphasis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_wallpaper_lyrics" />

                <TextView
                    style="@style/SettingsText.Caption2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/settings_switch_caption_spacing"
                    android:maxLines="1"
                    android:text="@string/settings_wallpaper_lyrics_summary" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyrics_translation_setting"
            android:layout_width="@dimen/settings_switch_card_width"
            android:layout_height="@dimen/settings_switch_card_height"
            android:layout_marginStart="@dimen/settings_switch_card_gap"
            android:background="@drawable/bg_settings_card"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:importantForAccessibility="no"
            android:orientation="horizontal"
            android:paddingStart="@dimen/settings_switch_card_padding_start"
            android:paddingEnd="@dimen/settings_switch_card_padding_start">

            <com.tcrrry.desktoplyrics.IcarSwitch
                android:id="@+id/lyrics_translation_switch"
                android:layout_width="@dimen/settings_switch_width"
                android:layout_height="@dimen/settings_switch_height"
                android:clickable="true"
                android:contentDescription="@string/settings_lyrics_translation" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_switch_label_spacing"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingsText.Body2.Emphasis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_lyrics_translation" />

                <TextView
                    style="@style/SettingsText.Caption2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/settings_switch_caption_spacing"
                    android:maxLines="1"
                    android:text="@string/settings_lyrics_translation_summary" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
