<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_search_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/settings_content_padding_start"
    android:paddingTop="@dimen/commercial_content_padding_top"
    android:paddingEnd="@dimen/settings_content_padding_end"
    android:paddingBottom="@dimen/settings_content_padding_vertical"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_compact_control_height"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_track_input"
            style="@style/SettingsText.CompactPrimary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:background="@drawable/bg_settings_input"
            android:hint="@string/settings_search_track_hint"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:singleLine="true"
            android:textColorHint="@color/settings_text_secondary" />

        <EditText
            android:id="@+id/search_artist_input"
            style="@style/SettingsText.CompactPrimary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/settings_compact_control_gap"
            android:layout_weight="1"
            android:background="@drawable/bg_settings_input"
            android:hint="@string/settings_search_artist_hint"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:singleLine="true"
            android:textColorHint="@color/settings_text_secondary" />

        <EditText
            android:id="@+id/search_album_input"
            style="@style/SettingsText.CompactPrimary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/settings_compact_control_gap"
            android:layout_weight="1"
            android:background="@drawable/bg_settings_input"
            android:hint="@string/settings_search_album_hint"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:singleLine="true"
            android:textColorHint="@color/settings_text_secondary" />

        <LinearLayout
            android:id="@+id/search_action"
            android:layout_width="@dimen/settings_search_action_width"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/settings_compact_control_gap"
            android:background="@drawable/bg_settings_segment_selected"
            android:clickable="true"
            android:contentDescription="@string/settings_search_action"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/search_action_icon"
                android:layout_width="@dimen/settings_search_action_icon_size"
                android:layout_height="@dimen/settings_search_action_icon_size"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_settings_search"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/search_action_label"
                style="@style/SettingsText.CompactPrimary.Emphasis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_search_action_content_gap"
                android:maxLines="1"
                android:text="@string/settings_search_action"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/search_status"
        style="@style/SettingsText.Caption2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_control_spacing"
        android:text="@string/settings_search_waiting" />

    <LinearLayout
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_control_spacing"
        android:orientation="vertical" />
</LinearLayout>
