<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_about_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/settings_content_padding_start"
    android:paddingTop="@dimen/commercial_content_padding_top"
    android:paddingEnd="@dimen/settings_content_padding_end"
    android:paddingBottom="@dimen/settings_content_padding_vertical"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/about_version_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_action_card_height"
        android:layout_marginBottom="@dimen/settings_group_spacing"
        android:background="@drawable/bg_settings_card"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/settings_switch_card_padding_start"
        android:paddingEnd="@dimen/settings_switch_card_padding_start">

        <TextView
            style="@style/SettingsText.Body2.Emphasis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_about_version_label" />

        <TextView
            android:id="@+id/about_version_value"
            style="@style/SettingsText.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:maxLines="1"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_terms_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/about_terms_card_min_height"
        android:background="@drawable/bg_settings_card"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/about_terms_card_padding">

        <TextView
            style="@style/SettingsText.Body1.Emphasis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_about_terms" />

        <ImageView
            android:id="@+id/about_terms_qr"
            android:layout_width="@dimen/about_terms_qr_size"
            android:layout_height="@dimen/about_terms_qr_size"
            android:layout_marginTop="@dimen/about_terms_qr_spacing"
            android:background="@color/commercial_qr_background"
            android:contentDescription="@string/accessibility_about_terms_qr"
            android:scaleType="centerInside" />

    </LinearLayout>
</LinearLayout>
